tdf#95494 Calc can not sort Chinese word by stroke and radical,

_length must at the tail of filename.

Change-Id: I434e89bf052d8f3130bfca62d71eaf8588c2bac9
Reviewed-on: https://gerrit.libreoffice.org/21213
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>